[package]
name = "webshark"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
binread = "2.2.0"
pnet_packet = "0.28.0"
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'HtmlInputElement',
  'HtmlTableCellElement',
  'HtmlTableElement',
  'HtmlTableRowElement',
  'Node',
  'Window',
]
